--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex Johnson - JavaScript Developer Portfolio</title>
-    <meta name="description" content="JavaScript Developer specializing in React, Node.js, and modern web development. View my portfolio of projects and get in touch." />
-    <meta name="author" content="Alex Johnson" />
+    <title>Rohan P. Suresh - Senior Full Stack Developer Portfolio</title>
+    <meta name="description" content="Senior Full Stack Developer specializing in React.js, React Native, Node.js, and AI-driven development. View my portfolio of projects and get in touch." />
+    <meta name="author" content="Rohan P. Suresh" />
 
-    <meta property="og:title" content="Alex Johnson - JavaScript Developer Portfolio" />
-    <meta property="og:description" content="JavaScript Developer specializing in React, Node.js, and modern web development." />
+    <meta property="og:title" content="Rohan P. Suresh - Senior Full Stack Developer Portfolio" />
+    <meta property="og:description" content="Senior Full Stack Developer specializing in React.js, React Native, Node.js, and AI-driven development." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@alexjohnson" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
